--- a/deployment/resources/certs/cert-wildcard-prod.yaml
+++ b/deployment/resources/certs/cert-wildcard-prod.yaml
@@ -8,7 +8,7 @@ spec:
   secretTemplate:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "components,dashboard"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "components,monitoring"
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
   issuerRef:
     name: letsencrypt-prod
