feat: enables metrics for the following components: authentik, cert-manager, forgejo, harbor, jenkins
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/cert-manager/release.yaml
+++ b/deployment/apps/cert-manager/release.yaml
@@ -550,7 +550,7 @@ spec:
 
       servicemonitor:
         # Create a ServiceMonitor to add cert-manager to Prometheus.
-        enabled: false
+        enabled: true
 
         # The namespace that the service monitor should live in, defaults
         # to the cert-manager namespace.
