--- a/deployment/apps/jenkins/release.yaml
+++ b/deployment/apps/jenkins/release.yaml
@@ -827,11 +827,11 @@ spec:
         # https://plugins.jenkins.io/prometheus
 
         # -- Enables prometheus service monitor
-        enabled: false
+        enabled: true
         # -- Additional labels to add to the service monitor object
         serviceMonitorAdditionalLabels: {}
         # -- Set a custom namespace where to deploy ServiceMonitor resource
-        serviceMonitorNamespace:
+        serviceMonitorNamespace: monitoring
         # -- How often prometheus should scrape metrics
         scrapeInterval: 60s
 
