--- a/deployment/apps/authentik/release.yaml
+++ b/deployment/apps/authentik/release.yaml
@@ -564,7 +564,7 @@ spec:
       ## authentik server metrics service configuration
       metrics:
         # -- deploy metrics service
-        enabled: false
+        enabled: true
         service:
           # -- metrics service type
           type: ClusterIP
@@ -580,7 +580,7 @@ spec:
           portName: metrics
         serviceMonitor:
           # -- enable a prometheus ServiceMonitor
-          enabled: false
+          enabled: true
           # -- Prometheus ServiceMonitor interval
           interval: 30s
           # -- Prometheus ServiceMonitor scrape timeout
