--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -449,10 +449,10 @@ spec:
       ## @param gitea.metrics.serviceMonitor.enabled Enable Forgejo metrics service monitor
       ## @param gitea.metrics.serviceMonitor.namespace Namespace in which Prometheus is running
       metrics:
-        enabled: false
+        enabled: true
         serviceMonitor:
-          enabled: false
-          namespace: ""
+          enabled: true
+          namespace: "monitoring"
           #  additionalLabels:
           #    prometheus-release: prom1
 
