fix: adds config relating to crds into the helm release
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/sealed-secrets/release.yaml
+++ b/deployment/apps/sealed-secrets/release.yaml
@@ -12,6 +12,10 @@ spec:
         kind: HelmRepository
         name: sealed-secrets
         namespace: flux-system
+  install:
+    crds: Create
+  upgrade:
+    crds: CreateReplace
   interval: 15m
   timeout: 5m
   releaseName: sealed-secrets
