--- a/deployment/init/kustomizations/sealed-secrets.yaml
+++ b/deployment/init/kustomizations/sealed-secrets.yaml
@@ -1,11 +1,27 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: sealed-secrets
+  name: sealed-secrets-controller
   namespace: flux-system
 spec:
   interval: 15m
   path: deployment/apps/sealed-secrets
+  prune: true
+  timeout: 2m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: sealed-secrets
+  namespace: flux-system
+spec:
+  interval: 15m
+  path: deployment/resources/sealed-secrets
+  dependsOn:
+    - "sealed-secrets-controller"
   prune: true
   timeout: 2m
   sourceRef:
