fix: edits config relating to crds into the kustomization
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/init/kustomizations/sealed-secrets.yaml
+++ b/deployment/init/kustomizations/sealed-secrets.yaml
@@ -21,7 +21,7 @@ spec:
   interval: 15m
   path: deployment/resources/sealed-secrets
   dependsOn:
-    - "sealed-secrets-controller"
+    - name: "sealed-secrets-controller"
   prune: true
   timeout: 2m
   sourceRef:
