--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -46,7 +46,7 @@ spec:
     ## @param strategy.rollingUpdate.maxSurge maxSurge
     ## @param strategy.rollingUpdate.maxUnavailable maxUnavailable
     strategy:
-      type: "RollingUpdate"
+      type: "Recreate"
       rollingUpdate:
         maxSurge: "100%"
         maxUnavailable: 0
