fix: allows for creation of dashboard for prometheus/grafana
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/prometheus/release.yaml
+++ b/deployment/apps/prometheus/release.yaml
@@ -1240,11 +1240,11 @@ spec:
 
       ## ForceDeployDatasources Create datasource configmap even if grafana deployment has been disabled
       ##
-      forceDeployDatasources: false
+      forceDeployDatasources: true
 
       ## ForceDeployDashboard Create dashboard configmap even if grafana deployment has been disabled
       ##
-      forceDeployDashboards: false
+      forceDeployDashboards: true
 
       ## Deploy default dashboards
       ##
