--- a/deployment/apps/grafana/release.yaml
+++ b/deployment/apps/grafana/release.yaml
@@ -92,7 +92,7 @@ spec:
     ## See `kubectl explain deployment.spec.strategy` for more
     ## ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
     deploymentStrategy:
-      type: RollingUpdate
+      type: Recreate
 
     readinessProbe:
       httpGet:
