--- a/deployment/apps/grafana/release.yaml
+++ b/deployment/apps/grafana/release.yaml
@@ -430,7 +430,7 @@ spec:
     ##
     persistence:
       type: pvc
-      enabled: true
+      enabled: false
       # storageClassName: default
       ## (Optional) Use this to bind the claim to an existing PersistentVolume (PV) by name.
       volumeName: ""
