fix: setting up grafana correctly
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/grafana/release.yaml
+++ b/deployment/apps/grafana/release.yaml
@@ -430,7 +430,7 @@ spec:
     ##
     persistence:
       type: pvc
-      enabled: false
+      enabled: true
       # storageClassName: default
       ## (Optional) Use this to bind the claim to an existing PersistentVolume (PV) by name.
       volumeName: ""
