fix: (probably) enables the service monitors
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/authentik/release.yaml
+++ b/deployment/apps/authentik/release.yaml
@@ -573,7 +573,8 @@ spec:
           # -- metrics service annotations
           annotations: {}
           # -- metrics service labels
-          labels: {}
+          labels:
+            app: authentik-server
           # -- metrics service port
           servicePort: 9300
           # -- metrics service port name
@@ -590,8 +591,8 @@ spec:
           # -- Prometheus [MetricsRelabelConfigs] to apply to samples before ingestion
           metricRelabelings: []
           # -- Prometheus ServiceMonitor selector
-          selector: {}
-            # prometheus: kube-prometheus
+          selector:
+            prometheus: monitoring
 
           # -- Prometheus ServiceMonitor scheme
           scheme: ""
@@ -967,7 +968,8 @@ spec:
           # -- metrics service annotations
           annotations: {}
           # -- metrics service labels
-          labels: {}
+          labels:
+            app: authentik-worker
           # -- metrics service port
           servicePort: 9300
           # -- metrics service port name
@@ -984,8 +986,8 @@ spec:
           # -- Prometheus [MetricsRelabelConfigs] to apply to samples before ingestion
           metricRelabelings: []
           # -- Prometheus ServiceMonitor selector
-          selector: {}
-            # prometheus: kube-prometheus
+          selector:
+            prometheus: monitoring
 
           # -- Prometheus ServiceMonitor scheme
           scheme: ""
