--- a/deployment/apps/grafana/release.yaml
+++ b/deployment/apps/grafana/release.yaml
@@ -272,7 +272,9 @@ spec:
       enabled: true
       path: /metrics
       namespace: monitoring
-      labels: {}
+      labels:
+        app: grafana
+        prometheus: monitoring
       interval: 30s
       scheme: http
       tlsConfig: {}
