--- a/deployment/apps/prometheus/release.yaml
+++ b/deployment/apps/prometheus/release.yaml
@@ -4122,24 +4122,24 @@ spec:
         ## prometheus resource to be created with selectors based on values in the helm deployment,
         ## which will also match the servicemonitors created
         ##
-        serviceMonitorSelectorNilUsesHelmValues: true
+        serviceMonitorSelectorNilUsesHelmValues: false
 
         ## ServiceMonitors to be selected for target discovery.
         ## If {}, select all ServiceMonitors
         ##
-        serviceMonitorSelector: {}
-        ## Example which selects ServiceMonitors with label "prometheus" set to "somelabel"
-        # serviceMonitorSelector:
-        #   matchLabels:
-        #     prometheus: somelabel
+        serviceMonitorSelector:
+          ## Example which selects ServiceMonitors with label "prometheus" set to "somelabel"
+          # serviceMonitorSelector:
+          matchLabels:
+            prometheus: monitoring
 
         ## Namespaces to be selected for ServiceMonitor discovery.
         ##
-        serviceMonitorNamespaceSelector: {}
-        ## Example which selects ServiceMonitors in namespaces with label "prometheus" set to "somelabel"
-        # serviceMonitorNamespaceSelector:
-        #   matchLabels:
-        #     prometheus: somelabel
+        serviceMonitorNamespaceSelector:
+          ## Example which selects ServiceMonitors in namespaces with label "prometheus" set to "somelabel"
+          # serviceMonitorNamespaceSelector:
+          matchLabels:
+            prometheus: monitor
 
         ## If true, a nil or {} value for prometheus.prometheusSpec.podMonitorSelector will cause the
         ## prometheus resource to be created with selectors based on values in the helm deployment,
