--- a/deployment/apps/sealed-secrets/release.yaml
+++ b/deployment/apps/sealed-secrets/release.yaml
@@ -488,13 +488,14 @@ spec:
       serviceMonitor:
         ## @param metrics.serviceMonitor.enabled Specify if a ServiceMonitor will be deployed for Prometheus Operator
         ##
-        enabled: false
+        enabled: true
         ## @param metrics.serviceMonitor.namespace Namespace where Prometheus Operator is running in
         ##
-        namespace: ""
+        namespace: "monitoring"
         ## @param metrics.serviceMonitor.labels Extra labels for the ServiceMonitor
         ##
-        labels: {}
+        labels:
+          prometheus: monitoring
         ## @param metrics.serviceMonitor.annotations Extra annotations for the ServiceMonitor
         ##
         annotations: {}
