--- a/deployment/apps/prometheus/release.yaml
+++ b/deployment/apps/prometheus/release.yaml
@@ -4122,7 +4122,7 @@ spec:
         ## prometheus resource to be created with selectors based on values in the helm deployment,
         ## which will also match the servicemonitors created
         ##
-        serviceMonitorSelectorNilUsesHelmValues: false
+        serviceMonitorSelectorNilUsesHelmValues: true
 
         ## ServiceMonitors to be selected for target discovery.
         ## If {}, select all ServiceMonitors
