fix: (probably) enables the service monitors
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/prometheus/release.yaml
+++ b/deployment/apps/prometheus/release.yaml
@@ -4127,11 +4127,11 @@ spec:
         ## ServiceMonitors to be selected for target discovery.
         ## If {}, select all ServiceMonitors
         ##
-        serviceMonitorSelector:
+        serviceMonitorSelector: {}
           ## Example which selects ServiceMonitors with label "prometheus" set to "somelabel"
           # serviceMonitorSelector:
-          matchLabels:
-            prometheus: monitoring
+          # matchLabels:
+          #   prometheus: monitoring
 
         ## Namespaces to be selected for ServiceMonitor discovery.
         ##
