fix: (probably) enables the service monitors
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/harbor/release.yaml
+++ b/deployment/apps/harbor/release.yaml
@@ -425,8 +425,8 @@ spec:
       ##
       serviceMonitor:
         enabled: true
-        additionalLabels:
-          prometheus: monitoring
+        additionalLabels: {}
+          # prometheus: monitoring
         # Scrape interval. If not set, the Prometheus default scrape interval is used.
         interval: ""
         # Metric relabel configs to apply to samples before ingestion.
