chore: removes servicemonitor for forgejo
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -449,7 +449,7 @@ spec:
       ## @param gitea.metrics.serviceMonitor.enabled Enable Forgejo metrics service monitor
       ## @param gitea.metrics.serviceMonitor.namespace Namespace in which Prometheus is running
       metrics:
-        enabled: true
+        enabled: false
         serviceMonitor:
           enabled: true
           namespace: "monitoring"
