--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -451,7 +451,7 @@ spec:
       metrics:
         enabled: false
         serviceMonitor:
-          enabled: true
+          enabled: false
           namespace: "monitoring"
           additionalLabels:
             prometheus: monitoring
