fix: corrects the forgejo svc monitor
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/forgejo/release.yaml
+++ b/deployment/apps/forgejo/release.yaml
@@ -451,7 +451,7 @@ spec:
       metrics:
         enabled: true
         serviceMonitor:
-          enabled: true
+          enabled: false
           namespace: "monitoring"
           additionalLabels:
             prometheus: monitoring
