fix: corrects the forgejo svc monitor
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/apps/forgejo/servicemonitor.yaml
+++ b/deployment/apps/forgejo/servicemonitor.yaml
@@ -19,7 +19,7 @@ spec:
   jobLabel: forgejo
   namespaceSelector:
     matchNames:
-      - monitoring
+      - components
   selector:
     matchLabels:
       app.kubernetes.io/instance: forgejo
