feat: adds better immich support
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/resources/certs/issuer-wildcard-prod.yaml
+++ b/deployment/resources/certs/issuer-wildcard-prod.yaml
@@ -12,6 +12,7 @@ spec:
       - selector:
           dnsZones:
             - "only-a-user.com"
+            - "steppler.cloud"
         dns01:
           cloudflare:
             email: admin@only-a-user.com
