--- a/deployment/resources/certs/cert-wildcard-prod.yaml
+++ b/deployment/resources/certs/cert-wildcard-prod.yaml
@@ -8,7 +8,7 @@ spec:
   secretTemplate:
     annotations:
       reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
-      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "components,monitoring"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "components,monitoring,external-routes"
       reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
   issuerRef:
     name: letsencrypt-prod
@@ -16,3 +16,5 @@ spec:
   dnsNames:
     - "only-a-user.com"
     - "*.only-a-user.com"
+    - "steppler.cloud"
+    - "*.steppler.cloud"
