--- a/deployment/resources/external/immich/routes.yaml
+++ b/deployment/resources/external/immich/routes.yaml
@@ -1,20 +1,4 @@
 apiVersion: traefik.io/v1alpha1
-kind: IngressRouteTCP
-metadata:
-  name: external-immich-tcp
-  namespace: external-routes
-spec:
-  entryPoints:
-    - websecure
-  routes:
-    - match: HostSNI(`images.steppler.cloud`)
-      services:
-        - name: external-immich-tcp-svc
-          port: 443
-  tls:
-    passthrough: true
----
-apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: external-immich-http
@@ -30,3 +14,5 @@ spec:
           port: 80
       middlewares:
         - name: external-immich-http-headers
+  tls:
+    secretName: "letsencrypt-wildcard-cert-prod"
