fix: corrects endpoints, service and route
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/resources/external/immich/services.yaml
+++ b/deployment/resources/external/immich/services.yaml
@@ -7,6 +7,8 @@ spec:
   ports:
     - name: http
       port: 80
+      targetPort: 2283
+      protocol: TCP
 ---
 apiVersion: v1
 kind: Endpoints
@@ -19,3 +21,4 @@ subsets:
     ports:
       - name: http
         port: 2283
+        protocol: TCP
