--- a/deployment/resources/external/wygiwyh/routes.yaml
+++ b/deployment/resources/external/wygiwyh/routes.yaml
@@ -1,19 +1,19 @@
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: external-glance-http
+  name: external-wygiwyh-http
   namespace: external-routes
 spec:
   entryPoints:
     - web
     - websecure
   routes:
-    - match: Host(`start.steppler.cloud`)
+    - match: Host(`finances.steppler.cloud`)
       kind: Rule
       services:
-        - name: external-glance-http-svc
+        - name: external-wygiwyh-http-svc
           port: 80
       middlewares:
-        - name: external-glance-http-headers
+        - name: external-wygiwyh-http-headers
   tls:
     secretName: "letsencrypt-wildcard-cert-prod"
