--- a/deployment/resources/external/portainer/middleware.yaml
+++ b/deployment/resources/external/portainer/middleware.yaml
@@ -1,9 +1,9 @@
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
-  name: external-portainer-http-headers
+  name: external-portainer-https-headers
   namespace: external-routes
 spec:
   headers:
     customRequestHeaders:
-      X-Forwarded-Proto: "http"
+      X-Forwarded-Proto: "https"
