fix: fixes setup for portainer (hopefully)
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/resources/external/portainer/middleware.yaml
+++ b/deployment/resources/external/portainer/middleware.yaml
@@ -7,3 +7,11 @@ spec:
   headers:
     customRequestHeaders:
       X-Forwarded-Proto: "https"
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: ServersTransport
+metadata:
+  name: external-portainer-transport
+  namespace: external-routes
+spec:
+  insecureSkipVerify: true
