fix: fixes setup for portainer (hopefully)
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/resources/external/portainer/routes.yaml
+++ b/deployment/resources/external/portainer/routes.yaml
@@ -13,6 +13,7 @@ spec:
         - name: external-portainer-https-svc
           port: 443
           scheme: https
+          serversTransport: portainer-transport
       middlewares:
         - name: external-portainer-https-headers
   tls:
