fix: fixes setup for portainer (hopefully)
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/resources/external/portainer/routes.yaml
+++ b/deployment/resources/external/portainer/routes.yaml
@@ -9,7 +9,7 @@ spec:
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
-  name: external-portainer-http
+  name: external-portainer-https
   namespace: external-routes
 spec:
   entryPoints:
@@ -21,6 +21,6 @@ spec:
         - name: external-portainer-https-svc
           port: 443
           scheme: https
-          serversTransport: portainer-transport
+          # serversTransport: portainer-transport
   tls:
     secretName: "letsencrypt-wildcard-cert-prod"
