--- a/deployment/resources/external/portainer/routes.yaml
+++ b/deployment/resources/external/portainer/routes.yaml
@@ -1,15 +1,17 @@
 apiVersion: traefik.io/v1alpha1
-kind: IngressRouteTCP
+kind: IngressRoute
 metadata:
-  name: external-portainer-tcp
+  name: external-portainer-https
   namespace: external-routes
 spec:
   entryPoints:
+    - web
     - websecure
   routes:
-    - match: HostSNI(`manage.steppler.cloud`)
+    - match: Host(`manage.steppler.cloud`)
+      kind: Rule
       services:
-        - name: external-portainer-tcp-svc
+        - name: external-portainer-https-svc
           port: 443
   tls:
-    passthrough: true
+    secretName: "letsencrypt-wildcard-cert-prod"
