--- a/deployment/resources/external/portainer/services.yaml
+++ b/deployment/resources/external/portainer/services.yaml
@@ -8,6 +8,7 @@ spec:
     - name: https
       port: 443
       targetPort: 9443
+      protocol: TCP
 ---
 apiVersion: v1
 kind: Endpoints
@@ -20,3 +21,4 @@ subsets:
     ports:
       - name: https
         port: 9443
+        protocol: TCP
