--- a/deployment/resources/external/portainer/routes.yaml
+++ b/deployment/resources/external/portainer/routes.yaml
@@ -1,17 +1,35 @@
 apiVersion: traefik.io/v1alpha1
+kind: ServersTransport
+metadata:
+  name: external-portainer-transport
+  namespace: external-routes
+spec:
+  insecureSkipVerify: true
+---
+apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
   name: external-portainer-https
   namespace: external-routes
 spec:
   entryPoints:
-    - web
-    - websecure
+    web:
+      address: ":80"
+      http:
+        redirections:
+          entryPoint:
+            to: websecure
+            scheme: https
+            serversTransport: external-portainer-transport
+    websecure:
+      address: ":443"
   routes:
     - match: Host(`manage.steppler.cloud`)
       kind: Rule
       services:
         - name: external-portainer-https-svc
-          port: 9443
+          port: 443
+          scheme: https
+
   tls:
     secretName: "letsencrypt-wildcard-cert-prod"
