fix: fixes setup for portainer (hopefully)
Signed-off-by: only-a-user <49812354+Only-a-User@users.noreply.github.com>

--- a/deployment/resources/external/portainer/routes.yaml
+++ b/deployment/resources/external/portainer/routes.yaml
@@ -13,16 +13,8 @@ metadata:
   namespace: external-routes
 spec:
   entryPoints:
-    web:
-      address: ":80"
-      http:
-        redirections:
-          entryPoint:
-            to: websecure
-            scheme: https
-            serversTransport: external-portainer-transport
-    websecure:
-      address: ":443"
+    - web
+    - websecure
   routes:
     - match: Host(`manage.steppler.cloud`)
       kind: Rule
