--- a/deployment/resources/external/komodo/services.yaml
+++ b/deployment/resources/external/komodo/services.yaml
@@ -1,24 +1,24 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: external-portainer-https-svc
+  name: external-komodo-http-svc
   namespace: external-routes
 spec:
   ports:
-    - name: https
-      port: 443
-      targetPort: 9443
+    - name: http
+      port: 80
+      targetPort: 9120
       protocol: TCP
 ---
 apiVersion: v1
 kind: Endpoints
 metadata:
-  name: external-portainer-https-svc
+  name: external-komodo-http-svc
   namespace: external-routes
 subsets:
   - addresses:
       - ip: 10.10.198.114
     ports:
-      - name: https
-        port: 9443
+      - name: http
+        port: 9120
         protocol: TCP
